tests/ui/errors/traits/specialized-error-for-expr.rs
fn main() {
    let s = String::from("hello");
    for _ in s {} //~ `String` is not an iterator [E0277]
}
